Fix display glitch with collapsed fieldsets on the calendar date request approval / approved pages.

--- a/htdocs/sites/all/themes/wk_bartik/css/wk_bartik.css
+++ b/htdocs/sites/all/themes/wk_bartik/css/wk_bartik.css
@@ -587,6 +587,14 @@ div.media img,
 
 /* ----- Date request approval form ----- */
 
+#wk-approved-date-requests fieldset.collapsed,
+#wk-approved-date-requests fieldset.collapsed legend,
+#wk-date-request-multiple-approval-form fieldset.collapsed,
+#wk-date-request-multiple-approval-form fieldset.collapsed legend {
+  border: none;
+  margin-bottom: 0px;
+}
+
 .date-request-contact {
   margin-right: 16px;
 }
